--- a/index.css
+++ b/index.css
@@ -2,3 +2,27 @@ html {
     background-color: #00660e;
     color: white;
 }
+
+body {
+    width: 100vw;
+    height: 100vh;
+    box-sizing: border-box;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.gamescreen {
+    display: flex;
+}
+
+/*
+img {
+    height: 128px;
+}
+*/
+.fill-black {
+    filter: brightness(0) invert(1);
+}
