--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 html {
-    background-color: #00660e;
+    /* background-color: #00660e; */
+    background: radial-gradient(#00660e, #004409);
     /* background: linear-gradient(to right,#ff0000,#ffe600,#00ff15,#0051ff,#e100ff, #ff0000) 0 / 200%; */
     animation: 3s a linear infinite;
     color: white;
