--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ html {
 .wave {
     background: linear-gradient(to right,#ff0000,#ffe600,#00ff15,#0051ff,#e100ff, #ff0000) 0 / 200%;
     animation: 2s a linear infinite;
-    background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
   @keyframes a{
